force-app/main/default/objects/Marketing_Outlet__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Main_Contact_Person__c</fullName>
        <label>Main Contact Person</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Person_Email__c</fullName>
        <label>Main Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Main_Person_Phone__c</fullName>
        <label>Main Person Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Useful_Information__c</fullName>
        <label>Other Useful Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>CreatedBy.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Drill_Down__c</fullName>
        <label>Type Drill Down</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Advetorial</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Event Outside School</fullName>
                </value>
                <value>
                    <fullName>Fayre - Themed Event</fullName>
                </value>
                <value>
                    <fullName>Flyer Distribution</fullName>
                </value>
                <value>
                    <fullName>Fun Day</fullName>
                </value>
                <value>
                    <fullName>Internet Ad</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Open Day</fullName>
                </value>
                <value>
                    <fullName>Pamphlet</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Prospectus</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Visit Agents/Companies/Embassies</fullName>
                </value>
                <value>
                    <fullName>Year Book</fullName>
                </value>
                <value>
                    <fullName>Other Printed Material</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Ad</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Marketing Channel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>King_s_College_Beijing</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>King&apos;s College Beijing</value>
        </filters>
        <label>King&apos;s College Beijing</label>
    </listViews>
    <listViews>
        <fullName>The_British_College_of_Brazil</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The British College of Brazil</value>
        </filters>
        <label>The British College of Brazil</label>
    </listViews>
    <listViews>
        <fullName>The_British_School_of_Guangzhou</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The British School of Guangzhou</value>
        </filters>
        <label>The British School of Guangzhou</label>
    </listViews>
    <listViews>
        <fullName>The_British_School_of_Kuala_Lumpur</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The British School of Kuala Lumpur</value>
        </filters>
        <label>The British School of Kuala Lumpur</label>
    </listViews>
    <listViews>
        <fullName>The_British_School_of_Marbella</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The British School of Marbella</value>
        </filters>
        <label>The British School of Marbella</label>
    </listViews>
    <listViews>
        <fullName>The_British_School_of_Nanjing</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The British School of Nanjing</value>
        </filters>
        <label>The British School of Nanjing</label>
    </listViews>
    <listViews>
        <fullName>The_British_School_of_Navarra</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The British School of Navarra</value>
        </filters>
        <label>The British School of Navarra</label>
    </listViews>
    <listViews>
        <fullName>The_British_School_of_Tashkent</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The British School of Tashkent</value>
        </filters>
        <label>The British School of Tashkent</label>
    </listViews>
    <listViews>
        <fullName>The_International_School_of_Moscow</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The International School of Moscow</value>
        </filters>
        <label>The International School of Moscow</label>
    </listViews>
    <listViews>
        <fullName>The_King_s_School_of_Manila</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>School__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The King&apos;s School of Manila</value>
        </filters>
        <label>The King&apos;s School of Manila</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Channels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>